2010-10-08  Hui Huang  <hui.2.huang@nokia.com>

Reviewed by Simon Hausmann.

        ifdef out code that rewrites Flash Plug-in wmode for Symbian build
        https://bugs.webkit.org/show_bug.cgi?id=43484

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin):

git-svn-id: svn://svn.chromium.org/blink/trunk@69396 bbb929c8-8fbe-4397-9dbb-9b2b20218538