third_party/WebKit/WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -1506,6 +1506,7 @@ PassRefPtr<Widget> FrameLoaderClientQt::createPlugin(const IntSize& pluginSize, 
     else { // NPAPI Plugins
         Vector<String> params = paramNames;
         Vector<String> values = paramValues;
+#if !OS(SYMBIAN)
         if (mimeType == "application/x-shockwave-flash") {
             QWebPageClient* client = m_webFrame->page()->d->client;
             const bool isQWebView = client && qobject_cast<QWidget*>(client->pluginParent());
@@ -1531,6 +1532,7 @@ PassRefPtr<Widget> FrameLoaderClientQt::createPlugin(const IntSize& pluginSize, 
             }
 #endif
         }
+#endif
 
         RefPtr<PluginView> pluginView = PluginView::create(m_frame, pluginSize, element, url,
             params, values, mimeType, loadManually);
